[workspace]
members = ["libs/request_handler", "libs/utils"]

[package]
name = "simple_http_server"
license = "MIT"
description = "Nothing special, just learning rust."
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
request_handler = { path = "libs/request_handler" }
utils = { path = "libs/utils" }

