[workspace]
members = ["libs/request_handler", "libs/utils"]

[package]
name = "simple_http_server"
license = "MIT"
description = "Nothing special, just learning rust."
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
request_handler = { path = "libs/request_handler" }
utils = { path = "libs/utils" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Networking_WinSock"] }
